added opponent counter and reset

--- a/index.html
+++ b/index.html
@@ -11,17 +11,36 @@
 <body>
   <main>
     <div id="wrapper">
-      <h1>Your Life</h1>
-      <div id="counter">
-        <div id="tens">
-          <i class="fas fa-caret-up" id="tens-up"></i>
-          <div id="tens-digit">2</div>
-          <i class="fas fa-caret-down" id="tens-down"></i>
+      <div id="you">
+        <h1>You</h1>
+        <div class="counter">
+          <div class="tens">
+            <i class="fas fa-caret-up tens-up"></i>
+            <div class="tens-digit">2</div>
+            <i class="fas fa-caret-down tens-down"></i>
+          </div>
+          <div class="ones">
+            <i class="fas fa-caret-up ones-up"></i>
+            <div class="ones-digit">0</div>
+            <i class="fas fa-caret-down ones-down"></i>      
+          </div>
+          <i class="fas fa-redo reset"></i>
         </div>
-        <div id="ones">
-          <i class="fas fa-caret-up" id="ones-up"></i>
-          <div id="ones-digit">0</div>
-          <i class="fas fa-caret-down" id="ones-down"></i>      
+      </div>
+      <div id="opponent">
+        <h1>Opponent</h1>
+        <div class="counter">
+          <div class="tens">
+            <i class="fas fa-caret-up tens-up"></i>
+            <div class="tens-digit">2</div>
+            <i class="fas fa-caret-down tens-down"></i>
+          </div>
+          <div class="ones">
+            <i class="fas fa-caret-up ones-up"></i>
+            <div class="ones-digit">0</div>
+            <i class="fas fa-caret-down ones-down"></i>      
+          </div>
+          <i class="fas fa-redo reset"></i>
         </div>
       </div>
     </div>
