added custom counters, fixed collapsible tab

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             <i class="fas fa-caret-down ones-down"></i>      
           </div>
           <i class="fas fa-redo reset"></i>
+          <i class="fas fa-angle-double-down expand"></i>
+        </div>
+        <div class="collapse">
+          <div class="add-counter">
+            <input type="text" class="counter-name" placeholder="Counter Name...">
+            <i class="fas fa-caret-up counter-add"></i>
+            <i class="fas fa-caret-down counter-minus"></i>
+            <div class="counter-output"></div>
+          </div>
+        </div>
+        <div class="buttons">
+          <div class="add-new-counter"><i class="fas fa-plus"></i></div>
         </div>
       </div>
       <div id="opponent">
@@ -41,6 +53,18 @@
             <i class="fas fa-caret-down ones-down"></i>      
           </div>
           <i class="fas fa-redo reset"></i>
+          <i class="fas fa-angle-double-down expand"></i>
+        </div>
+        <div class="collapse">
+          <div class="add-counter">
+            <input type="text" class="counter-name" placeholder="Counter Name...">
+            <i class="fas fa-caret-up counter-add"></i>
+            <i class="fas fa-caret-down counter-minus"></i>
+            <div class="counter-output"></div>
+          </div>
+        </div>
+        <div class="buttons">
+          <div class="add-new-counter"><i class="fas fa-plus"></i></div>
         </div>
       </div>
     </div>
