add counter button fixed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="buttons">
-          <div class="add-new-counter"><i class="fas fa-plus"></i></div>
+          <i class="add-new-counter fas fa-plus"></i>
         </div>
       </div>
       <div id="opponent">
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="buttons">
-          <div class="add-new-counter"><i class="fas fa-plus"></i></div>
+          <i class="add-new-counter fas fa-plus"></i>
         </div>
       </div>
     </div>
