added delete function

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
         <div class="collapse">
           <div class="add-counter">
+            <i class="fas fa-times delete-counter"></i>
             <input type="text" class="counter-name" placeholder="Counter Name...">
             <i class="fas fa-caret-up counter-add"></i>
             <i class="fas fa-caret-down counter-minus"></i>
@@ -57,6 +58,7 @@
         </div>
         <div class="collapse">
           <div class="add-counter">
+            <i class="fas fa-times delete-counter"></i>
             <input type="text" class="counter-name" placeholder="Counter Name...">
             <i class="fas fa-caret-up counter-add"></i>
             <i class="fas fa-caret-down counter-minus"></i>
